--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,20 @@
     transform: rotate(360deg);
   }
 }
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.bestProduct {
+  background-color: #db7090;
+  animation: clignote 2s linear infinite;
+}
+@keyframes clignote {
+  50% {
+    opacity: 0.5;
+  }
+}
